standalone build automation